# mona-sync

./: .env.example  .gitignore  Caddyfile  Cargo.toml  Dockerfile  README.md  database.db  docker-compose.yml  exported_db.json  index.html  install.sh
migrations/: 0001_init.sql  0002_unified_sync.sql  0003_add_vault.sql  20260512181648_init_all_tables.sql
src/: handlers.rs  main.rs  models.rs
