[package]
name = "mona_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
axum-server = { version = "0.7", features = ["tls-rustls"] }

tokio = { version = "1", features = ["full"] }

sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15.7"
rcgen = "0.13"
jsonwebtoken = "9"
async-trait = "0.1"
