[package]
name = "mona_backend"
version = "0.3.0"
edition = "2024"

[dependencies]
axum = "0.8"
axum-server = { version = "0.8", features = ["tls-rustls"] }

tokio = { version = "1", features = ["full"] }

sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15.7"
rcgen = "0.13"
jsonwebtoken = "9"
# async-trait is no longer strictly needed for axum 0.8 but might be used elsewhere
async-trait = "0.1"
axum-governor = "2.0.1"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
